--- a/index.html
+++ b/index.html
@@ -10,11 +10,27 @@
 
 <div class="sidenav">
   <h2>Menu</h2>
-  <a href="pages/pagina1.html" target="content">Página 1</a>
-  <a href="pages/pagina2.html" target="content">Página 2</a>
-  <a href="pages/pagina3.html" target="content">Página 3</a>
-  <a href="pages/pagina4.html" target="content">Página 4</a>
+  <a href="pages/HTML Basic.html" target="content">HTML Basic</a>
+  <a href="pages/HTML Elements.html" target="content">HTML Elements</a>
+  <a href="pages/HTML Attributes.html" target="content">HTML Attributes</a>
+  <a href="pages/HTML Headings.html" target="content">HTML Headings</a>
+  <a href="pages/HTML Paragraphs.html" target="content">HTML Paragraphs</a>
+  <a href="pages/HTML Styles.html" target="content">HTML Styles</a>
+  <a href="pages/HTML Formatting.html" target="content">HTML Formatting</a>
+  <a href="pages/HTML Quotations.html" target="content">HTML Quotations</a>
+  <a href="pages/HTML Comments.html" target="content">HTML Comments</a>
+  <a href="pages/HTML Colors.html" target="content">HTML Colors</a>
+  <a href="pages/HTML Links.html" target="content">HTML Links</a>
+  <a href="pages/HTML Favicon.html" target="content">HTML Favicon</a>
+  <a href="pages/HTML Table.html" target="content">HTML Table</a>
+  <a href="pages/HTML Links.html" target="content">HTML List</a>
   <a href="pages/pagina5.html" target="content">Página 5</a>
+  <a href="pages/pagina5.html" target="content">Página 5</a>
+  <a href="pages/pagina5.html" target="content">Página 5</a>
+  <a href="pages/pagina5.html" target="content">Página 5</a>
+  <a href="pages/pagina5.html" target="content">Página 5</a>
+  <a href="pages/pagina5.html" target="content">Página 5</a>
+
 </div>
 
 <div class="content" id="content">
