--- a/pages/HTML Attributes.html
+++ b/pages/HTML Attributes.html
@@ -3,46 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplos de Atributos HTML</title>
+    <title>Explicação dos Atributos HTML</title>
     <style>
-        table {
-            border-collapse: collapse;
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
         }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
-
-    <h1>Exemplos de Atributos HTML</h1>
-
-    <h2>1. Atributos de Links (href)</h2>
-    <a href="https://www.example.com" target="_blank">Link para Exemplo</a>
-
-    <h2>2. Atributos de Imagens (src, alt)</h2>
-    <img src="https://via.placeholder.com/150" alt="Exemplo de Imagem">
-
-    <h2>3. Atributos de Tabelas (border, cellpadding, cellspacing)</h2>
-    <table border="1" cellpadding="5" cellspacing="0">
-        <tr>
-            <th>Nome</th>
-            <th>Idade</th>
-        </tr>
-        <tr>
-            <td>João</td>
-            <td>25</td>
-        </tr>
-        <tr>
-            <td>Maria</td>
-            <td>30</td>
-        </tr>
-    </table>
-
-    <h2>4. Atributos Globais (class, id, style)</h2>
-    <p class="destaque" id="paragrafo-1" style="color: red;">Este é um parágrafo destacado.</p>
-
+    <h1>Explicação dos Atributos HTML</h1>
+    <p>Os atributos HTML fornecem informações adicionais sobre elementos HTML. Eles são sempre especificados na tag de abertura de um elemento e fornecem controle extra sobre o comportamento ou a aparência do elemento. Abaixo estão alguns exemplos comuns de atributos HTML:</p>
+    
+    <ul>
+        <li><code>id</code>: Identifica exclusivamente um elemento.</li>
+        <li><code>class</code>: Define uma ou mais classes CSS para um elemento, permitindo estilização comum.</li>
+        <li><code>style</code>: Aplica estilos CSS inline diretamente ao elemento.</li>
+        <li><code>src</code>: Especifica o URL de origem (source) para elementos como <code>&lt;img&gt;</code> e <code>&lt;script&gt;</code>.</li>
+        <li><code>href</code>: Especifica o URL de destino para hiperlinks (<code>&lt;a&gt;</code>).</li>
+        <li><code>alt</code>: Fornece um texto alternativo para elementos como imagens (<code>&lt;img&gt;</code>), útil para acessibilidade.</li>
+        <li><code>title</code>: Fornece um título informativo para elementos como hiperlinks (<code>&lt;a&gt;</code>).</li>
+        <li><code>target</code>: Especifica onde abrir o link, como em uma nova janela ou na mesma janela.</li>
+    </ul>
+    
+    <p>Esses são apenas alguns exemplos de atributos HTML. Eles são fundamentais para controlar o comportamento e a aparência dos elementos HTML em uma página web.</p>
 </body>
 </html>
