--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <a href="pages/HTML Favicon.html" target="content">HTML Favicon</a>
   <a href="pages/HTML Table.html" target="content">HTML Table</a>
   <a href="pages/HTML Links.html" target="content">HTML List</a>
-  <a href="pages/pagina5.html" target="content">Página 5</a>
+  <a href="pages/HTML Block & Inline.html" target="content">HTML Block & Inline</a>
   <a href="pages/pagina5.html" target="content">Página 5</a>
   <a href="pages/pagina5.html" target="content">Página 5</a>
   <a href="pages/pagina5.html" target="content">Página 5</a>
