--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <a href="pages/HTML Table.html" target="content">HTML Table</a>
   <a href="pages/HTML Links.html" target="content">HTML List</a>
   <a href="pages/HTML Block & Inline.html" target="content">HTML Block & Inline</a>
-  <a href="pages/pagina5.html" target="content">Página 5</a>
-  <a href="pages/pagina5.html" target="content">Página 5</a>
-  <a href="pages/pagina5.html" target="content">Página 5</a>
+  <a href="pages/HTML Div.html" target="content">HTML Div</a>
+  <a href="pages/HTML Classes.html" target="content">HTML Classes</a>
+  <a href="pages/HTML id.html" target="content">HTML ID</a>
   <a href="pages/pagina5.html" target="content">Página 5</a>
   <a href="pages/pagina5.html" target="content">Página 5</a>
 
