--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <a href="pages/HTML Div.html" target="content">HTML Div</a>
   <a href="pages/HTML Classes.html" target="content">HTML Classes</a>
   <a href="pages/HTML id.html" target="content">HTML ID</a>
-  <a href="pages/pagina5.html" target="content">Página 5</a>
-  <a href="pages/pagina5.html" target="content">Página 5</a>
+  <a href="pages/HTML IFrames.html" target="content">HTML Iframes</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
 
 </div>
 
