--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
   <a href="pages/HTML Classes.html" target="content">HTML Classes</a>
   <a href="pages/HTML id.html" target="content">HTML ID</a>
   <a href="pages/HTML IFrames.html" target="content">HTML Iframes</a>
+  <a href="pages/HTML Semantics.html" target="content">HTML Semantics</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
 
 </div>
