--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <a href="pages/HTML id.html" target="content">HTML ID</a>
   <a href="pages/HTML IFrames.html" target="content">HTML Iframes</a>
   <a href="pages/HTML Semantics.html" target="content">HTML Semantics</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Style Guide.html" target="content">HTML Style Guide</a>
+  <a href="pages/HTML Entities.html" target="content">HTML Entities</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
