--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <a href="pages/HTML Semantics.html" target="content">HTML Semantics</a>
   <a href="pages/HTML Style Guide.html" target="content">HTML Style Guide</a>
   <a href="pages/HTML Entities.html" target="content">HTML Entities</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Symbols.html" target="content">HTML Symbols</a>
+  <a href="pages/HTML Emojis.html" target="content">HTML Emojis</a>
+  <a href="pages/HTML Charsets.html" target="content">HTML Charsets</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
