--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <a href="pages/HTML Symbols.html" target="content">HTML Symbols</a>
   <a href="pages/HTML Emojis.html" target="content">HTML Emojis</a>
   <a href="pages/HTML Charsets.html" target="content">HTML Charsets</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Url Enconde.html" target="content">HTML Url Enconde</a>
+  <a href="pages/HTML vs Xhtml.html" target="content">HTML Xhtml</a>
+  <a href="pages/HTML Forms.html" target="content">HTML Forms</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
 
