--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <a href="pages/HTML Classes.html" target="content">HTML Classes</a>
   <a href="pages/HTML id.html" target="content">HTML ID</a>
   <a href="pages/HTML IFrames.html" target="content">HTML Iframes</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Semantics.html" target="content">HTML Semantics</a>
   <a href="pages/HTML Style Guide.html" target="content">HTML Style Guide</a>
   <a href="pages/HTML Entities.html" target="content">HTML Entities</a>
@@ -38,8 +39,21 @@
   <a href="pages/HTML Url Enconde.html" target="content">HTML Url Enconde</a>
   <a href="pages/HTML vs Xhtml.html" target="content">HTML Xhtml</a>
   <a href="pages/HTML Forms.html" target="content">HTML Forms</a>
+  <a href="pages/HTML Form Attribute.html" target="content">HTML Form Attribute</a>
+  <a href="pages/HTML Form Elements.html" target="content">HTML Form Elements</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+
+
+  
 
 </div>
 
