--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <a href="pages/HTML Forms.html" target="content">HTML Forms</a>
   <a href="pages/HTML Form Attribute.html" target="content">HTML Form Attribute</a>
   <a href="pages/HTML Form Elements.html" target="content">HTML Form Elements</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Input Attributes.html" target="content">HTML Input Attributes</a>
+  <a href="pages/HTML Forms Attributes.html" target="content">HTML Forms Attributes</a>
+  <a href="pages/HTML Canvas.html" target="content">HTML Canvas</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
   <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
