--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
   <a href="pages/HTML Input Attributes.html" target="content">HTML Input Attributes</a>
   <a href="pages/HTML Forms Attributes.html" target="content">HTML Forms Attributes</a>
   <a href="pages/HTML Canvas.html" target="content">HTML Canvas</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
-  <a href="pages/HTML Java Script.html" target="content">HTML JavaScript</a>
+  <a href="pages/HTML Svg.html" target="content">HTML Svg</a>
+  <a href="pages/HTML Media.html" target="content">HTML Media</a>
+  <a href="pages/HTML Video.html" target="content">HTML Video</a>
+  <a href="pages/HTML Audio.html" target="content">HTML Audio</a>
+  <a href="pages/HTML Drag e Drop.html" target="content">HTML Drag e Drop</a>
+ 
 
 
   
